force-app/main/default/objects/Approval_Log__c/fields/Actual_Approver__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual Account Team Approver</description>
    <label>Actual Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actual_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>