force-app/main/default/objects/Approval_Log__c/fields/Actual_Approver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact ID for the related actual approver Contact Record</description>
    <label>Actual Approver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Approval Logs (Actual Approver Contact)</relationshipLabel>
    <relationshipName>Approval_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>