force-app/main/default/objects/Approval_Log__c/fields/Actual_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver_Email__c</fullName>
    <description>Email of the Actual Approver</description>
    <label>Actual Approver Email</label>
    <type>Email</type>
</CustomField>