force-app/main/default/objects/Approval_Log__c/fields/Actual_Approver_Origin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver_Origin__c</fullName>
    <description>To Store Origin name of a Service Approver.</description>
    <label>Actual Approver Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>