force-app/main/default/objects/Approval_Log__c/fields/Actual_Approver_Title__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver_Title__c</fullName>
    <description>Name of the Approver and Title of the Actual Approver</description>
    <label>Actual Department/Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>