force-app/main/default/objects/Approval_Log__c/fields/Actual_External_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Actual_External_Approver_Name__c</fullName>
    <description>To Populate Actual External Approver Name who approves the task</description>
    <label>Actual External Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>