force-app/main/default/objects/Approval_Log__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>Approval/Rejection Comment will be populated here.</description>
    <label>Approval Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>