force-app/main/default/objects/Approval_Log__c/fields/Approval_Description__c.field-meta.xml
<CustomField>
    <fullName>Approval_Description__c</fullName>
    <description>The approval description in the related Business rule</description>
    <label>Approval Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>