force-app/main/default/objects/Approval_Log__c/fields/Approval_source__c.field-meta.xml
<CustomField>
    <fullName>Approval_source__c</fullName>
    <label>Approval source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>