force-app/main/default/objects/Approval_Log__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <description>Type of the Required Approver</description>
    <label>Approver Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>