force-app/main/default/objects/Approval_Log__c/fields/BusinessRuleId__c.field-meta.xml
<CustomField>
    <fullName>BusinessRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Rule which is associated with the Approval Log</description>
    <label>Business Rule</label>
    <referenceTo>Business_Rule__c</referenceTo>
    <relationshipLabel>Approval Logs</relationshipLabel>
    <relationshipName>Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>