force-app/main/default/objects/Approval_Log__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case which is associated with the Approval Log</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Approval Logs</relationshipLabel>
    <relationshipName>Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>