force-app/main/default/objects/Approval_Log__c/fields/Decision_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date_Time__c</fullName>
    <label>Decision Date Time</label>
    <type>DateTime</type>
</CustomField>