force-app/main/default/objects/Approval_Log__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the External Approver</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>