force-app/main/default/objects/Approval_Log__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Approval Required from a particular Approver</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>