force-app/main/default/objects/Approval_Log__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number of External Approver</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>