force-app/main/default/objects/Approval_Log__c/fields/Requested_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Requested_DateTime__c</fullName>
    <description>Date/Time of the request for service requiring an approval</description>
    <formula>CreatedDate</formula>
    <label>Requested DateTime</label>
    <type>DateTime</type>
</CustomField>