force-app/main/default/objects/Approval_Log__c/fields/Required_Approver__c.field-meta.xml
<CustomField>
    <fullName>Required_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required Account Team Approver</description>
    <label>Required Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>