force-app/main/default/objects/Approval_Log__c/fields/Required_Approver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Required_Approver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>contact ID for the related required approver Contact Record</description>
    <label>Required Approver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Approval Logs</relationshipLabel>
    <relationshipName>Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>