force-app/main/default/objects/Approval_Log__c/fields/Required_Approver_Title__c.field-meta.xml
<CustomField>
    <fullName>Required_Approver_Title__c</fullName>
    <description>Name of the Approver and Title of the Required Approver</description>
    <label>Required Department/Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>