force-app/main/default/objects/Approval_Log__c/fields/ServiceApprovers__c.field-meta.xml
<CustomField>
    <fullName>ServiceApprovers__c</fullName>
    <description>Text Area field to store the Service Approvers</description>
    <label>Service Approvers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>